@@ -2,6 +2,7 @@ Revision history for Config::Abstraction - Configuration Abstraction Layer
 
 0.18
 	Use the file config_dirs/default as the base
+	Honour CONFIG_DIR
 
 0.17	Mon May  5 07:45:21 EDT 2025
 	Try harder to find the files
